samples/_failures_safe/1761601197_25fbf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_023e1768.c: In function ‘handle_start’:
./samples/SAFE/__tmp_023e1768.c:173:13: error: expected declaration or statement at end of input
  173 |             return STATE_START;
      |             ^~~~~~
./samples/SAFE/__tmp_023e1768.c:173:13: error: expected declaration or statement at end of input
